@@ -44,7 +44,8 @@ None.
                 N E W   F E A T U R E S   I N   4 . 5 . 3
 ----------------------------------------------------------------------------
 
-None.
+1)  Non-empty rules chains (those of the form zoneA2zoneB or
+    zoneA-zoneB) are no longer optimized out of existance by optimize 4. 
 
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 5
