@@ -4,6 +4,8 @@ Changes in 4.5.3
 
 2) Don't let fw-fw be optimized away.
 
+3) Don't optimize away non-empty rules chains.
+
 Changes in 4.5.2
 
 1) Extend OPTIMIZE & 4 to all tables.
